WexGit/Wex_DX/force-app/main/default/objects/Gallons_Data__c/Gallons_Data__c.object-meta.xml
<CustomObject>
    <label>Gallons Data</label>
    <nameField>
        <displayFormat>G-{00000000}</displayFormat>
        <label>Gallons Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gallons Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>