WexGit/Wex_DX/force-app/main/default/objects/Gallons_Data__c/fields/Account_Asset__c.field-meta.xml
<CustomField>
    <fullName>Account_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Asset</label>
    <referenceTo>Account_Asset__c</referenceTo>
    <relationshipLabel>Gallons Data</relationshipLabel>
    <relationshipName>Gallons_Data</relationshipName>
    <type>Lookup</type>
</CustomField>