WexGit/Wex_DX/force-app/main/default/objects/Gallons_Data__c/fields/F1_Account__c.field-meta.xml
<CustomField>
    <fullName>F1_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>F1 Account #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>