WexGit/Wex_DX/force-app/main/default/objects/Gallons_Data__c/fields/Gallon_Month__c.field-meta.xml
<CustomField>
    <fullName>Gallon_Month__c</fullName>
    <description>The first of the month for the monthly gallons total.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The first of the month for the monthly gallons total.</inlineHelpText>
    <label>Gallons Date</label>
    <type>Date</type>
</CustomField>