WexGit/Wex_DX/force-app/main/default/objects/Gallons_Data__c/fields/Gallons_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gallons_Amount__c</fullName>
    <label>Gallons Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>