WexGit/Wex_DX/force-app/main/default/objects/Gallons_Data__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>Case(Month(Gallon_Month__c),
1, &quot;January&quot;,
2, &quot;Feburary&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;
,&quot;&quot;)

&amp; &quot; &quot;&amp;text(Year(Gallon_Month__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month / Year</label>
    <type>Text</type>
</CustomField>