WexGit/Wex_DX/force-app/main/default/objects/Gallons_Data__c/fields/WEX_Account__c.field-meta.xml
<CustomField>
    <fullName>WEX_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WEX Account #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>